# polyhook

./: .gitignore  Cargo.toml  README.md  rust-toolchain
hooklib/: Cargo.toml
hooklib/examples/: bear.ph  common.ph  dynamic_circle.ph  flat.ph  joined_rounds.ph  moon.ph  sew.ph  snorlax.ph  snowman  snowman.ph  sphere.ph  spiral_rounds.ph  star.ph  vstitch.ph
hooklib/src/: examples.rs  lib.rs  parametric.rs  pattern.rs  script.rs
polyhook/: Cargo.toml
polyhook/src/: code_view.rs  main.rs  model.rs  parameter_view.rs  parametric_view.rs  render.rs  shader.rs  shader.wgsl  transform.rs  ui.rs  visual_view.rs
polyhook/src/model/: pattern_model.rs
polyhook/src/render/: model.rs  pattern_model.rs  shader.rs  shader.wgsl  texture.rs  transform.rs
sdg/: Cargo.toml
sdg/src/: lib.rs
sgd/: Cargo.toml
sgd/src/: lib.rs
