[package]
name = "polyhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.18.0", features = ["derive"] }
eframe = { version = "0.28.1", features = ["wgpu"] }
egui = "0.28.1"
glam = { version = "0.29.0", features = ["bytemuck"] }
hooklib = { path = "../hooklib" }
