[package]
name = "polyhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { workspace = true }
bytemuck = { version = "1.18.0", features = ["derive"] }
eframe = { version = "0.29.1", features = ["wgpu"] }
glam = { workspace = true }
egui = "0.29.1"
hooklib = { path = "../hooklib" }
sgd = { path = "../sgd" }
egui_extras = { version = "0.29.1", features = ["syntect"] }
